--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-BOT_TOKEN='7871114248:AAHpOr0l7R53OPjhYmvrXFa4xuUdnlsE7rQ'
+BOT_TOKEN='7622019784:AAEvQZ0nMZcrE-fE7m--NxwFbCXAJv-vLf4'
+FB_EMAIL=romm.code@gmail.com
+FB_PASSWORD=Luka21022012
+ADMIN_ID='5285694652'
