--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN='7622019784:AAEvQZ0nMZcrE-fE7m--NxwFbCXAJv-vLf4'
-FB_EMAIL=romm.code@gmail.com
-FB_PASSWORD=Luka21022012
-ADMIN_ID='5285694652'
+BOT_TOKEN=
+FB_EMAIL=
+FB_PASSWORD=
+ADMIN_ID=
